# alps

./: CMakeLists.txt  README.md  install-dep
.github/workflows/: ubuntu-build.yml
cmake/: FindDistaf.cmake  FindFamAtomic.cmake  FindMint.cmake  FindXATTR.cmake  internal_utils.cmake
doc/: Doxyfile  README.md
examples/: CMakeLists.txt
include/alps/common/: debug_options.hh
include/alps/pegasus/: lfs_options.hh
scripts/debug/: analyze_log.py
scripts/deploy/: alps  alps-install-dep.yml  alps-install-root.yml  alps-install.yml  alps.py  alps.yml.template.j2  cheatsheet.md  l4tm_book_data.ini  l4tm_book_data.tmas.ini  lfs.tmas.yaml  lfs.yaml
scripts/make-distribution/: README.md  add_copyright.sh  copyright.c.txt  copyright.md.txt  copyright.sh.txt  make-distribution.sh
src/: CMakeLists.txt  mainpage.md
src/common/: log.cc
src/globalheap/: CMakeLists.txt  globalheap.md  lease.cc  nvslab.hh
src/pegasus/: CMakeLists.txt  lfs_region_file.cc  pegasthread.cc  pegasus.md  pointer.hh  tmpfs_region_file.cc
test/: CMakeLists.txt
test/integration/: CMakeLists.txt  roles.yml  test_atomic.cc  test_atomic.yml  test_integration.yml  test_pegas.cc  test_pegas.yml  test_pointer.cc  test_pointer.yml  test_suite.yml  test_topology.cc  test_topology.yml
test/unit/: CMakeLists.txt  test_unit.yml
test/unit/common/: CMakeLists.txt
test/unit/globalheap/: CMakeLists.txt
test/unit/pegasus/: CMakeLists.txt
